@@ -2,7 +2,9 @@ AV2 Changelog :: version a4.2
 
 * Water pouches can now hold up to 5 water
 * New bending tab icons from FavouriteDragon
+* Skills menu opens at current bending
 
 > Fix penguin, firebender, and airbender name tags being shown
 > Fix cracked account issues - gen fake account UUID based on username
 > Fix crash when killing entity without a registered lang file name
+> Fix wall w/ floating block causing item duplication
